// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealtimeMessagingIntegrationInstall component should display a placeholder if there's no Shopify store without chat, andshould display the list of Shopify stores where the chat is installed 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      mychat
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      tag="li"
    >
      Installation
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    Installation
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div>
          <p>
            Chat
             installed on
             
            mylittleintegration
            .
             
            <a
              href={true}
              onClick={[Function]}
            >
              Remove
            </a>
          </p>
        </div>
        <div>
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p
            className="text-muted text-center"
          >
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div>
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transitionAppearTimeout={150}
                  transitionEnterTimeout={150}
                  transitionLeaveTimeout={150}
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`RealtimeMessagingIntegrationInstall component should display the code snippet for custom integration 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      mychat
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      tag="li"
    >
      Installation
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    Installation
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div />
        <div>
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p
            className="text-muted text-center"
          >
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div>
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transitionAppearTimeout={150}
                  transitionEnterTimeout={150}
                  transitionLeaveTimeout={150}
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`RealtimeMessagingIntegrationInstall component should display the list of Shopify stores without chats 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      mychat
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      tag="li"
    >
      Installation
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    Installation
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        md="8"
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          Let's install your chat on your website.
        </p>
        <div />
        <div>
          <Button
            block={true}
            className="mb-2"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            <img
              src="test-file-stub"
            />
            Add 
            chat
             on 
            mylittleintegration
          </Button>
          <p
            className="text-muted text-center"
          >
            Can't see your store here?
             
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/integrations/shopify/new/"
            >
              Connect it to Gorgias
            </Link>
          </p>
          <div
            className="divider"
          >
            OR
          </div>
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <p>
              Copy the code below and paste it on your website above the
               
              <kbd>
                &lt;/body&gt;
              </kbd>
               
              tag:
            </p>
            <div>
              <Card
                className="p-0 mb-2"
                tag="div"
              >
                <Alert
                  className="m-0"
                  color="info"
                  isOpen={true}
                  tag="div"
                  transitionAppearTimeout={150}
                  transitionEnterTimeout={150}
                  transitionLeaveTimeout={150}
                >
                  <pre
                    id="code-snippet"
                    style={
                      Object {
                        "color": "inherit",
                        "display": "flex",
                        "height": "160px",
                      }
                    }
                  >
                    &lt;!-- Gorgias Chat Widget Start --&gt;
                    &lt;div id="gorgias-chat"&gt;
                    &lt;script&gt;window.gorgiasChatParameters = {}&lt;/script&gt;
                    &lt;script src="config.gorgias.io/foo/chat/bar" defer&gt;&lt;/script&gt;
                    &lt;/div&gt;
                    &lt;!-- Gorgias Chat Widget End --&gt;
                  </pre>
                </Alert>
              </Card>
              <Button
                color="info"
                data-clipboard-target="#code-snippet"
                id="copy-code-snippet"
                tag="button"
                type="button"
              >
                <i
                  className="fa fa-fw fa-files-o mr-2"
                />
                Copy
              </Button>
            </div>
          </Form>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;
